--- a/app/src/main/res/layout/user_view.xml
+++ b/app/src/main/res/layout/user_view.xml
@@ -35,5 +35,10 @@
             android:layout_height="wrap_content"
             android:text="Sähköposti" />
 
+        <TextView
+            android:id="@+id/tvTutkinnot"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 </androidx.appcompat.widget.LinearLayoutCompat>
